[fix] フィールドワークページ

--- a/fieldWork.html
+++ b/fieldWork.html
@@ -45,11 +45,12 @@
             <h2>menu</h2>
             <ul>
               <li><a href="#" class="scroll">ページトップ</a></li>
-              <li><a href="#article1" class="scroll">フィールドワーク1,2</a></li>
-              <li><a href="#article2" class="scroll">フィールドワーク3</a></li>
-              <li><a href="#article3" class="scroll">フィールドワーク4</a></li>
-              <li><a href="#article4" class="scroll">フィールドワーク5</a></li>
-              <li><a href="#article5" class="scroll">フィールドワーク オプション</a></li>
+              <li><a href="#article1" class="scroll">フィールドワーク1</a></li>
+              <li><a href="#article2" class="scroll">フィールドワーク2</a></li>
+              <li><a href="#article3" class="scroll">フィールドワーク3</a></li>
+              <li><a href="#article4" class="scroll">フィールドワーク4</a></li>
+              <li><a href="#article5" class="scroll">フィールドワーク5</a></li>
+              <li><a href="#article6" class="scroll">フィールドワーク オプション</a></li>
             </ul>
           <!-- サイドメニュー終了 -->
           </nav>
@@ -72,15 +73,15 @@
     <div class="contents">
       <div class="row fw-box">
         <div class="col-md-8 col-md-offset-2">
-          <h1 >フィールドワーク紹介</h1>
+          <h2>フィールドワーク紹介</h2>
 
           <h4 class="fw-title" style="margin-top: 40px;">フィールドワーク行程</h4>
           <img class="img-responsive" src="Pictures/Prepare/FieldWork/フィールドワーク行程.jpg" alt="写真">
 
             <!-- フィールドワーク01,02 -->
-          <div class="row" style="margin-top: 40px;">
-            <div class="col-md-6 col-lg-6 col-sm-6">
-              <h4>フィールドワーク1</h4>
+          <div class="row">
+            <div class="col-md-6 col-lg-6 col-sm-6 fw-box">
+              <h4 id="article1">フィールドワーク1</h4>
               <h4 class="fw-title">対馬の自然環境保全(全日)コース</h4>
               <p class="item_txt">
                 フェリーで来島された方は徒歩でふれあい処に集まってください。その後、福岡1便、長崎1便の飛行機で来島された方を迎えに対馬空港に向かいます。
@@ -88,25 +89,31 @@
                 午後は半日コースの方と合流して野生順化ステーションでヤマネコの順化についてのレクチャを受けます。その後、厳原中心部で解散となります。
               </p>
 
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork01.jpg" alt="写真">
+              <h4 class="fw-title-sm" style="text-decoration: underline;">全日コース</h4>
+              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork11.png" alt="写真">
             </div>
 
+            <hr class="hr-sm">
 
-            <div class="col-md-6 col-lg-6 col-sm-6">
-              <h4>フィールドワーク2</h4>
+            <div class="col-md-6 col-lg-6 col-sm-6 fw-box">
+              <h4 id="article2">フィールドワーク2</h4>
               <h4 class="fw-title">対馬の自然環境保全(半日)コース</h4>
 
               <p class="item_txt">
                 福岡2便、長崎2便の飛行機で来島の方は対馬空港までお迎えに上がります。ジェットフォイルで来島の方は徒歩でふれあい処に集まってください。
                 ふれあい処で対馬の郷土料理を味わった後、全日コースの方と合流して野生順化ステーションでヤマネコの順化についてのレクチャを受けます。その後、厳原中心部で解散となります。
               </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork02.jpg" alt="写真">
+
+              <h4 class="fw-title-sm" style="text-decoration: underline;">半日コース</h4>
+              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork12.png" alt="写真">
             </div>
           </div><!-- div class="row" id="article1"> -->
 
+          <hr class="hr-sm">
+
           <div class="row" style="margin-top: 40px;">
             <div class="col-md-12 col-lg-12">
-              <h4>フィールドワーク3</h4>
+              <h4 id="article3">フィールドワーク3</h4>
               <h4 class="fw-title">対馬の観光ガイド・史跡コース</h4>
             </div>
           </div>
@@ -115,74 +122,59 @@
               <p class="item_txt">
                 ＜晴天時＞奈良時代の朝鮮式山城と明治時代の砲台が残る金田城をめぐるコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、金田城に移動、城山を登ります。下山後は厳原中心部で解散となります。
               </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork06.png" alt="写真">
+
+              <h4 class="fw-title-sm" style="text-decoration: underline;">晴天時</h4>
+              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork09.png" alt="写真">
             </div>
 
             <div class="col-md-6 col-lg-6">
               <p class="item_txt">
                 ＜雨天時＞対馬の神話、伝説の地をめぐるコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、海運の要所であった西の漕手、住吉神社を見学し、竜宮伝説が残る和多津美神社を訪れます。天気が良くなれば烏帽子岳展望台から浅茅湾のリアス地形をご確認いただけます。その後、厳原中心部で解散となります。
               </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork07.png" alt="写真">
-            </div>
 
+              <h4 class="fw-title-sm" style="text-decoration: underline;">雨天時</h4>
+              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork10.png" alt="写真">
+            </div>
           </div>
 
+          <hr class="hr-sm">
+
           <!-- フィールドワーク0405 -->
-          <div class="row" style="margin-top: 40px;">
-            <div class="col-md-6 col-lg-6">
-              <h4>フィールドワーク4</h4>
+          <div class="row">
+            <div class="col-md-6 col-lg-6 fw-box">
+              <h4 id="article4">フィールドワーク4</h4>
               <h4 class="fw-title">対馬の漁業振興・特産品コース</h4>
-              <p class="item_txt">
+              <p class="item_txt_lg">
                 地場産業の活性化に取り組む方を訪ねるツアーです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、海産物の6次産業化、地域力発信に力を入れている真心水産を訪れます。比田勝港に近い日昇漁業ではIターンから漁業就業、企業に至った経緯などを伺います。その後、厳原中心部で解散となります。
               </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork04.jpg" alt="写真">
+              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork14.png" alt="写真">
             </div>
 
-            <div class="col-md-6 col-lg-6">
-              <h4>フィールドワーク5</h4>
+            <hr class="hr-sm">
+
+            <div class="col-md-6 col-lg-6 fw-box">
+              <h4 id="article5">フィールドワーク5</h4>
               <h4 class="fw-title">対馬の文化財保護コース</h4>
-              <p class="item_txt">
+              <p class="item_txt_lg">
                 対馬の文化財と建設中の博物館についてのレクチャと実地検分を兼ねたコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。
                 ジェットフォイルで来島の方はふれあい処まで徒歩でお願いします。ふれあい処で対馬の郷土料理を味わった後、博物館準備室の方から建設中の博物館に関するレクチャをいただきます。
                 その後、宗家の菩提寺である万松院、江戸時代のドックであるお船江をめぐります。最後は厳原中心部で解散となります。
               </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork05.jpg" alt="写真">
+              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork15.png" alt="写真">
             </div>
           </div>
 
-          <!-- フィールドワーク0405 -->
-          <div class="row" style="margin-top: 40px;">
-            <div class="col-md-6 col-lg-6">
-              <h4>フィールドワーク4</h4>
-              <h4 class="fw-title">対馬の漁業振興・特産品コース</h4>
-              <p class="item_txt">
-                地場産業の活性化に取り組む方を訪ねるツアーです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。対馬の魚介を味わった後、海産物の6次産業化、地域力発信に力を入れている真心水産を訪れます。比田勝港に近い日昇漁業ではIターンから漁業就業、企業に至った経緯などを伺います。その後、厳原中心部で解散となります。
-              </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork04.jpg" alt="写真">
-            </div>
-
-            <div class="col-md-6 col-lg-6">
-              <h4>フィールドワーク5</h4>
-              <h4 class="fw-title">対馬の文化財保護コース</h4>
-              <p class="item_txt">
-                対馬の文化財と建設中の博物館についてのレクチャと実地検分を兼ねたコースです。福岡2便、長崎2便で来島の方は対馬空港までお迎えに上がります。
-                ジェットフォイルで来島の方はふれあい処まで徒歩でお願いします。ふれあい処で対馬の郷土料理を味わった後、博物館準備室の方から建設中の博物館に関するレクチャをいただきます。
-                その後、宗家の菩提寺である万松院、江戸時代のドックであるお船江をめぐります。最後は厳原中心部で解散となります。
-              </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork05.jpg" alt="写真">
-            </div>
-          </div>
-
+          <hr class="hr-sm">
 
           <!-- フィールドワーク06 -->
           <div class="row" style="margin-top: 40px;">
             <div class="col-md-6 col-lg-6">
-              <h4>フィールドワーク3~5</h4>
+              <h4 id="article6">フィールドワークオプション</h4>
               <h4 class="fw-title">午前オプション</h4>
               <p class="item_txt">
                 フィールドワーク3~5を希望される方で、福岡、長崎1便およびフェリーでの来島をされる方にはオプションコースをご用意しています。元寇襲来の地など史跡を巡るコースになっています。別途料金は発生しません。
               </p>
-              <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWorkAMOption.jpg" alt="写真">
+              <img class="img-responsive" src="Pictures/Prepare/FieldWork/Fieldwork13.png" alt="写真">
             </div>
           </div>
 
