index.html のダウンロードボタンの色を変えた

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
           <li><a href="https://www.facebook.com/groups/140921016407990/" target="_blank" >Facebookページ</a></li>
         </ul>
 
-        <h3>ダウンロード</h3>
+        <h3 class="download">ダウンロード</h3>
         <!-- Split button -->
         <!-- 研究会のしおり -->
         <div class="btn-group">
-          <button type="button" class="btn btn-default" onclick="window.open('Files/Index/20170324_研究会のしおり.pdf')">研究会のしおり</button>
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+          <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170324_研究会のしおり.pdf')">研究会のしおり</button>
+          <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
             <span class="caret"></span>
             <span class="sr-only">Toggle Dropdown</span>
           </button>
