--- a/index.html
+++ b/index.html
@@ -189,12 +189,11 @@
         第2回の舞台は長崎県対馬市。国境の離島に乗り込み、地域を知り、課題について対話します。研究者や技術者だけでなく、いろいろな経験を積んだ方が集まることによって対話が加速し、解決に向けて動き出します。
         みなさんのご参加をお待ちしています。</p>
         <div class="overview">
-          <br>
-          <dt>名称：</dt><dd>人工知能学会 市民共創知研究会　第2回研究会</dd>
-          <dt>会期：</dt><dd>2017年6月30日(金)～7月2日(日)</dd>
-          <dt>会場：</dt><dd>長崎県　対馬市　西山寺</dd>
-          <dt>主催：</dt><dd>人工知能学会　市民共創知研究会</dd>
-          <dt>後援：</dt><dd>対馬市、(一社)対馬観光物産協会</dd>
+          <h5 class="Emphasis2" style="font-size: 20px; padding-top:20px;">人工知能学会 市民共創知研究会 第2回研究会</h5>
+          <p>会期：2017年6月30日(金)～7月2日(日)</p>
+          <p>会場：長崎県対馬市 西山寺</p>
+          <p>主催：人工知能学会 市民共創知研究会</p>
+          <p>後援：対馬市、(一社)対馬観光物産協会</p>
         </div>
       </div>
     </div>
