--- a/registration.html
+++ b/registration.html
@@ -97,7 +97,7 @@
           <div class="overview">
             <br>
             <dt>参加申込締切：</dt><dd>2017年6月10日（土）</dd><dd class="warning">＊フィールドワークの調整のため、早期の参加申し込みにご協力ください</dd>
-            <dt>参加申込フォーム：</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1</a></dd>
+            <dt>参加申込フォーム：</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">こちら</a></dd>
             <dt>発表原稿投稿締切：</dt><dd>2017年6月10日（土）</dd>
           </div>
         </section>
