--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="loader">
       <img src="img-loading.gif" width="80" height="80" alt="Now Loading..." />
       <p>Now Loading...</p>
+      <p>６月３０日開催！</p>
     </div>
   </div>
   <!-- ロード画面終了 -->
@@ -232,8 +233,8 @@
    <link rel="stylesheet" href="SideMenu.css">
    <link rel="stylesheet" href="Common.css">
    <link rel="stylesheet" href="Loading.css">
-   <link rel="stylesheet" href="css/style.css" />
-   <link rel="stylesheet" href="css/confs/sig-cci1.css" />
+   <link rel="stylesheet" href="css/style.css"/>
+   <link rel="stylesheet" href="css/confs/sig-cci1.css"/>
    <link rel="stylesheet" href="css/ihover.css">
    <link rel="stylesheet" href="css/lightbox.css">
 </body>
