submissiton.html が完成した。

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
-            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
+            <li><a href="submission.html">参加申し込み</a></li>
           </ul>
           <!--
           <ul class="nav navbar-nav navbar-right ExLink">
