--- a/registration.html
+++ b/registration.html
@@ -97,7 +97,7 @@
           <div class="overview">
             <br>
             <dt>参加申込締切：</dt><dd>2017年6月10日（土）</dd><dd class="warning">＊フィールドワークの調整のため、早期の参加申し込みにご協力ください</dd>
-            <dt>参加申込フォーム：</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">こちら</a></dd>
+            <dt>参加申込フォーム：</dt><dd><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1</a></dd>
             <dt>発表原稿投稿締切：</dt><dd>2017年6月10日（土）</dd>
           </div>
         </section>
@@ -136,8 +136,41 @@
           <a href="https://form.jotform.me/70938432366462">https://form.jotform.me/70938432366462</a>
         </section>
 
+        <section id="article5">
+          <h3>論文公開形式</h3>
+          <p>発表論文は「人工知能学会AI書庫（アイショコ）」（https://jsai.ixsq.nii.ac.jp/ ）に「オープンアクセス」での掲載となります。
+            原稿のウェブ公開にあたり特別な配慮が必要な場合（知的財産権など）は、下記問い合わせ先までその旨ご連絡ください。</p>
+            <div class="overview">
+              <br>
+              <dt>お問い合わせ先：</dt>
+              <dd>Email: siramatu@nitech.ac.jp（名工大白松）</dd>
+              <dd>Tel: 052-735-7968（名工大伊藤孝行研究室）</dd>
+            </div>
+        </section>
+
+        <section id="article6">
+          <h3>発表時間</h3>
+          <p>質疑応答を含まず15分（ただし、発表件数によって若干の変動があります）</p>
+          <p>パネルセッションなどの場合には時間がことなることがあります。</p>
+        </section>
+
+        <section id="article7">
+          <h3>発表時間</h3>
+          <p>・地域社会やオンラインコミュニティ等で創発される共創知や集合知の事例</p>
+          <p>・市民の共創や協働を支援する技術</p>
+          <p>・市民と研究者・技術者の共創や協働の事例</p>
+          <p>・より大きな集合知に繋がるような地域横断的な取り組み事例やそのための支援技術</p>
+          <p>・また、企業等組織内における組織開発、教育、マーケティング、製品開発等の組織における共創知に関する事例も含む</p>
+          <h5 class="MessageContent2">・関連キーワード</h5>
+          <p>Sharing Economy、合意形成、市民参画、シビックテック、フリーイノベーション、</p>
+          <p>オープンイノベーション、クラウドソーシング、シビックテック、オープンデータ、</p>
+          <p>オープンサイエンス、オープンガバメント、スマートシティ、オンラインコミュニティ、マルチエージェントシステム、社会ネットワーク分析、IoT/M2M、WWW、高齢者介護、社会選択理論、グループ意思決定、地域学、観光学、社会心理学、社会学、経済学、</p>
+          <p>行動経済学、文化経済学、心理学、倫理・法律、その他の科学・学術等の社会課題応用に関する共創的な事例</p>
+          <p>※第1回研究会で発表された内容については、下記サイトをご覧ください。</p>
+          <p><a href="http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html#talk_dialogue">http://www.itolab.nitech.ac.jp/SIG-CCI/confs/sig-cci1.html#talk_dialogue</a></p>
+        </section>
+
       </article>
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a>
     </div>
     <!-- 主文終了 -->
     <!-- フッター開始 -->
