--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="container">
         <div class="navbar-header">
           <!--タイトル-->
-          <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会</a>
+          <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/"><p>市民共創知研究会</p></a>
           <!--トグルボタンの設置-->
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content">
             <span class="icon-bar"></span><!-- トグルボタンの横棒　その１  -->
@@ -46,7 +46,7 @@
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
-            <li><a href="submission.html">参加申し込み</a></li>
+            <li><a href="registration.html">参加申し込み</a></li>
           </ul>
           <!--
           <ul class="nav navbar-nav navbar-right ExLink">
@@ -138,7 +138,7 @@
           <li><a href="prepare.html">対馬についての予習</a></li>
           <li><a href="fieldWork.html">フィールドワーク</a></li>
           <li><a href="traffic.html">交通案内</a></li>
-          <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
+          <li><a href="registration.html">参加申し込み</a></li>
         </ul>
         <!--h3>過去の研究会</h3-->
         <h3>関連</h3>
@@ -195,7 +195,7 @@
           <p>主催：人工知能学会 市民共創知研究会</p>
           <p>後援：対馬市、(一社)対馬観光物産協会</p>
         </div>
-        
+
       </div>
     </div>
   </div>
