--- a/registration.html
+++ b/registration.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="navbar-header">
           <!--タイトル-->
-          <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会</a>
+          <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/"><p>市民共創知研究会</p></a>
           <!--トグルボタンの設置-->
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content">
             <span class="icon-bar"></span><!-- トグルボタンの横棒　その１  -->
@@ -33,8 +33,14 @@
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
-            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
+            <li><a href="registration.html">参加申し込み</a></li>
           </ul>
+
+          <button type="button" class="btn btn-default navbar-btn navbar-right">
+            <a href="https://form.jotform.me/70938432366462">
+              原稿投稿
+            </a>
+          </button>
         </div>
 
         <!-- サイドメニュー開始 -->
@@ -47,8 +53,11 @@
             <li><a href="#" class="scroll">ページトップ</a></li>
             <li><a href="#article1" class="scroll" data-offset="50">イベント概要</a></li>
             <li><a href="#article2" class="scroll" data-offset="50">参加申し込み</a></li>
-            <li><a href="#article3" class="scroll" data-offset="50">佐藤さんオススメ経路</a></li>
-            <li><a href="#article4" class="scroll" data-offset="50">韓国からのアクセス</a></li>
+            <li><a href="#article3" class="scroll" data-offset="50">参加費</a></li>
+            <li><a href="#article4" class="scroll" data-offset="50">発表エントリー</a></li>
+            <li><a href="#article5" class="scroll" data-offset="50">論文公開形式</a></li>
+            <li><a href="#article6" class="scroll" data-offset="50">発表時間</a></li>
+            <li><a href="#article7" class="scroll" data-offset="50">募集テーマ</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
         </nav>
@@ -63,7 +72,7 @@
           &nbsp;&nbsp;&gt;&nbsp;&nbsp;
           <a href="index.html">第２回 研究会 Web</a>
           &nbsp;&nbsp;&gt;&nbsp;&nbsp;
-          <a href="traffic.html">交通案内</a>
+          <a href="registration.html">参加申し込み</a>
         </p>
       </div>
       <!-- パンくずリスト終了 -->
@@ -155,13 +164,14 @@
         </section>
 
         <section id="article7">
-          <h3>発表時間</h3>
+          <h3>募集テーマ</h3>
           <p>・地域社会やオンラインコミュニティ等で創発される共創知や集合知の事例</p>
           <p>・市民の共創や協働を支援する技術</p>
           <p>・市民と研究者・技術者の共創や協働の事例</p>
           <p>・より大きな集合知に繋がるような地域横断的な取り組み事例やそのための支援技術</p>
           <p>・また、企業等組織内における組織開発、教育、マーケティング、製品開発等の組織における共創知に関する事例も含む</p>
-          <h5 class="MessageContent2">・関連キーワード</h5>
+          <h5 class="MessageContent2">関連キーワード</h5>
+          <br><br>
           <p>Sharing Economy、合意形成、市民参画、シビックテック、フリーイノベーション、</p>
           <p>オープンイノベーション、クラウドソーシング、シビックテック、オープンデータ、</p>
           <p>オープンサイエンス、オープンガバメント、スマートシティ、オンラインコミュニティ、マルチエージェントシステム、社会ネットワーク分析、IoT/M2M、WWW、高齢者介護、社会選択理論、グループ意思決定、地域学、観光学、社会心理学、社会学、経済学、</p>
