--- a/traffic.html
+++ b/traffic.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="navbar-header">
           <!--タイトル-->
-          <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会</a>
+          <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/"><p>市民共創知研究会</p></a>
           <!--トグルボタンの設置-->
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content">
             <span class="icon-bar"></span><!-- トグルボタンの横棒　その１  -->
@@ -33,8 +33,14 @@
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
-            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
+            <li><a href="registration.html">参加申し込み</a></li>
           </ul>
+
+          <button type="button" class="btn btn-default navbar-btn navbar-right">
+            <a href="https://form.jotform.me/70938432366462">
+              原稿投稿
+            </a>
+          </button>
         </div>
 
         <!-- サイドメニュー開始 -->
@@ -49,6 +55,7 @@
             <li><a href="#article2" class="scroll" data-offset="50">目安費用</a></li>
             <li><a href="#article3" class="scroll" data-offset="50">佐藤さんオススメ経路</a></li>
             <li><a href="#article4" class="scroll" data-offset="50">韓国からのアクセス</a></li>
+            <li><a href="#article5" class="scroll" data-offset="50">対馬での過ごし方</a></li>
           </ul>
         <!-- サイドメニュー終了 -->
         </nav>
@@ -73,9 +80,11 @@
         <h1>交通案内</h1>
         <section id="article1">
           <h3>各都市からアクセス</h3>
+          <br><br>
           <figure>
             <img src="Pictures/Traffic/空路.jpg">
             <p>空路の場合、福岡空港または長崎空港経由となります。就航都市、時間、機材の関係で福岡経由のほうが余裕があります。</p>
+            <br><br>
             <img src="Pictures/Traffic/海路.jpg">
             <p>福岡港よりジェットフォイルまたはフェリーでアクセス可能です。到着地を厳原港にしてください。早朝着のフェリーでは朝7時まで船内滞在が可能です。</p>
             <p></p>
@@ -101,7 +110,7 @@
         <section id="article3">
           <h3>参加日別オススメ経路</h3>
           <h5 class="MessageContent">6月30日(金)</h5>
-          <br><br>
+          <br><br><br><br><br>
           <div class="row">
             <div class="col-md-12 col-sm-12">
                 <img src="Pictures/Traffic/0630Route.jpg" align="left">
@@ -109,7 +118,7 @@
             </div>
           </div>
           <h5 class="MessageContent">7月1日(土)</h5>
-          <br><br>
+          <br><br><br><br>
           <div class="row">
             <div class="col-md-12 col-sm-12">
               <img src="Pictures/Traffic/0701Route.jpg">
@@ -120,10 +129,29 @@
 
         <section id="article4">
           <h3>韓国からのアクセス</h3>
+          <br><br><br>
           <figure>
             <img src="Pictures/Traffic/釜山.jpg">
             <p>エアプサン就航都市(東京成田、中部、大阪、札幌)からは釜山経由でアクセス可能です。釜山からは高速船(海路)となります。高速船の到着地を厳原にしてください。比田勝港域のものもありますので、ご注意ください。</p>
           </figure>
+        </section>
+
+        <section id="article5">
+          <h3>対馬での過ごし方</h3>
+          <br>
+          <p>対馬での過ごし方については「研究会のしおり」をお読みください</p>
+          <!-- 研究会のしおり -->
+          <div class="btn-group">
+            <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170324_研究会のしおり.pdf')">研究会のしおり</button>
+            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+              <span class="caret"></span>
+              <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a href="Files/About/20170324_研究会のしおり.pdf" target="_blank">オープン</a></li>
+              <li><a href="Files/About/20170324_研究会のしおり.pdf" download="20170324_研究会のしおり.pdf">ダウンロード</a></li>
+            </ul>
+          </div>
         </section>
 
       </article>
