--- a/fieldWork.html
+++ b/fieldWork.html
@@ -16,7 +16,7 @@
         <div class="container">
           <div class="navbar-header">
             <!--タイトル-->
-            <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会</a>
+            <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/"><p>市民共創知研究会</p></a>
             <!--トグルボタンの設置-->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content">
               <span class="icon-bar"></span><!-- トグルボタンの横棒　その１  -->
@@ -33,8 +33,14 @@
               <li><a href="prepare.html">対馬についての予習</a></li>
               <li><a href="fieldWork.html">フィールドワーク</a></li>
               <li><a href="traffic.html">交通案内</a></li>
-              <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
+              <li><a href="registration.html">参加申し込み</a></li>
             </ul>
+
+            <button type="button" class="btn btn-default navbar-btn navbar-right">
+              <a href="https://form.jotform.me/70938432366462">
+                原稿投稿
+              </a>
+            </button>
           </div>
 
           <!-- サイドメニュー開始 -->
@@ -45,12 +51,15 @@
             <h2>menu</h2>
             <ul>
               <li><a href="#" class="scroll">ページトップ</a></li>
+              <li><a href="#article0" class="scroll">フィールドワーク行程</a></li>
               <li><a href="#article1" class="scroll">フィールドワーク1</a></li>
               <li><a href="#article2" class="scroll">フィールドワーク2</a></li>
               <li><a href="#article3" class="scroll">フィールドワーク3</a></li>
               <li><a href="#article4" class="scroll">フィールドワーク4</a></li>
               <li><a href="#article5" class="scroll">フィールドワーク5</a></li>
               <li><a href="#article6" class="scroll">フィールドワーク オプション</a></li>
+              <li><a href="#article7" class="scroll">フィールドワークで立ち寄るスポット</a></li>
+              <li><a href="#article8" class="scroll">フィールドワーク詳細</a></li>
             </ul>
           <!-- サイドメニュー終了 -->
           </nav>
@@ -75,10 +84,10 @@
         <div class="col-md-8 col-md-offset-2">
           <h2>フィールドワーク紹介</h2>
 
-          <h4 class="fw-title" style="margin-top: 40px;">フィールドワーク行程</h4>
+          <h4 class="fw-title" id="article0" style="margin-top: 40px;">フィールドワーク行程</h4>
           <img class="img-responsive" src="Pictures/Prepare/FieldWork/フィールドワーク行程.jpg" alt="写真">
 
-            <!-- フィールドワーク01,02 -->
+          <!-- フィールドワーク01,02 -->
           <div class="row">
             <div class="col-md-6 col-lg-6 col-sm-6 fw-box">
               <h4 id="article1">フィールドワーク1</h4>
@@ -108,6 +117,7 @@
               <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork12.png" alt="写真">
             </div>
           </div><!-- div class="row" id="article1"> -->
+          <!-- フィールドワーク01,02終了 -->
 
           <hr class="hr-sm">
 
@@ -137,6 +147,7 @@
             </div>
           </div>
 
+          <br><br>
           <hr class="hr-sm">
 
           <!-- フィールドワーク0405 -->
@@ -163,6 +174,7 @@
               <img class="img-responsive" src="Pictures/Prepare/FieldWork/FieldWork15.png" alt="写真">
             </div>
           </div>
+          <!-- フィールドワーク0405終了 -->
 
           <hr class="hr-sm">
 
@@ -177,10 +189,47 @@
               <img class="img-responsive" src="Pictures/Prepare/FieldWork/Fieldwork13.png" alt="写真">
             </div>
           </div>
+          <!-- フィールドワーク06終了 -->
 
-        </div><!-- <div class="container show-grid"> -->
+          <!-- フィールドワーク スポット -->
+          <div class="row" style="margin-top: 40px;">
+            <div class="col-md-12 col-lg-12">
+              <h4 class="fw-title" id="article7">フィールドワークで立ち寄るスポット</h4>
+              <p>
+                フィールドワークで立ち寄る個々のスポットについては別ページ「つしまっぷ」にて紹介しています。<br>
+              </p>
+              <a href="https://tsushimap.herokuapp.com/" target="_blank">つしまっぷ</a>
+            </div>
+          </div>
+          <!-- フィールドワーク スポット終了 -->
+
+          <!-- 論文募集要項 -->
+          <div class="row" style="margin-top: 40px;">
+            <div class="col-md-12 col-lg-12">
+              <h4 class="fw-title" id="article8">フィールドワーク詳細</h4>
+              <p>
+                フィールドワークの詳細については論文募集要項に記載しています。
+              </p>
+                <!-- 論文募集要項 -->
+                <div class="btn-group">
+                  <button type="button" class="btn btn-info" onclick="window.open('Files/Index/20170330_CFP案.pdf')">論文募集要項　</button>
+                  <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
+                    <span class="caret"></span>
+                    <span class="sr-only">Toggle Dropdown</span>
+                  </button>
+                  <ul class="dropdown-menu">
+                    <li><a href="Files/Index/20170330_CFP案.pdf" target="_blank">オープン</a></li>
+                    <li><a href="Files/Index/20170330_CFP案.pdf" download="20170324_研究会のしおり.pdf">ダウンロード</a></li>
+                  </ul>
+                </div>
+
+            </div>
+          </div>
+          <!-- 論文募集要項 終了 -->
+
+        </div><!--   <div class="col-md-8 col-md-offset-2"> -->
       </div>
-      
+
     </div>
     <!-- 主文終了 -->
     <!-- フッター開始 -->
