--- a/prepare.html
+++ b/prepare.html
@@ -16,7 +16,7 @@
         <div class="container">
           <div class="navbar-header">
             <!--タイトル-->
-            <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/">市民共創知研究会</a>
+            <a class="navbar-brand" href="http://www.itolab.nitech.ac.jp/SIG-CCI/"><p>市民共創知研究会</p></a>
             <!--トグルボタンの設置-->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav-content">
               <span class="icon-bar"></span><!-- トグルボタンの横棒　その１  -->
@@ -33,8 +33,14 @@
               <li><a href="prepare.html">対馬についての予習</a></li>
               <li><a href="fieldWork.html">フィールドワーク</a></li>
               <li><a href="traffic.html">交通案内</a></li>
-              <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSc7btyg7ha_BRy1eBoFpYDR1dGy6k2XMr-9Z8-BUEwWOwkwOg/viewform?c=0&w=1">参加申し込み</a></li>
+              <li><a href="registration.html">参加申し込み</a></li>
             </ul>
+
+            <button type="button" class="btn btn-default navbar-btn navbar-right">
+              <a href="https://form.jotform.me/70938432366462">
+                原稿投稿
+              </a>
+            </button>
           </div>
 
           <!-- サイドメニュー開始 -->
