--- a/fieldWork.html
+++ b/fieldWork.html
@@ -265,9 +265,9 @@
      <link rel="stylesheet" href="SideMenu.css">
      <link rel="stylesheet" href="Common.css">
       <link rel="stylesheet" href="Accordion.css">
-     <link rel="stylesheet" href="../css/style.css" />
-     <link rel="stylesheet" href="../css/confs/sig-cci1.css" />
-     <link rel="stylesheet" href="../css/ihover.css">
-     <link rel="stylesheet" href="../css/lightbox.css">
+     <link rel="stylesheet" href="css/style.css" />
+     <link rel="stylesheet" href="css/confs/sig-cci1.css" />
+     <link rel="stylesheet" href="css/ihover.css">
+     <link rel="stylesheet" href="css/lightbox.css">
   </body>
 </html>
