--- a/registration.html
+++ b/registration.html
@@ -214,9 +214,9 @@
     <link rel="stylesheet" href="Loading.css">
     <link rel="stylesheet" href="SideMenu.css">
     <link rel="stylesheet" href="Common.css">
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/confs/sig-cci1.css" />
-    <link rel="stylesheet" href="../css/ihover.css">
-    <link rel="stylesheet" href="../css/lightbox.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/confs/sig-cci1.css" />
+    <link rel="stylesheet" href="css/ihover.css">
+    <link rel="stylesheet" href="css/lightbox.css">
   </body>
 </html>
