--- a/traffic.html
+++ b/traffic.html
@@ -53,7 +53,7 @@
             <li><a href="#" class="scroll">ページトップ</a></li>
             <li><a href="#article1" class="scroll" data-offset="50">各都市からアクセス</a></li>
             <li><a href="#article2" class="scroll" data-offset="50">目安費用</a></li>
-            <li><a href="#article3" class="scroll" data-offset="50">佐藤さんオススメ経路</a></li>
+            <li><a href="#article3" class="scroll" data-offset="50">参加日別オススメ経路</a></li>
             <li><a href="#article4" class="scroll" data-offset="50">韓国からのアクセス</a></li>
             <li><a href="#article5" class="scroll" data-offset="50">対馬での過ごし方</a></li>
           </ul>
@@ -188,9 +188,9 @@
     <link rel="stylesheet" href="Loading.css">
     <link rel="stylesheet" href="SideMenu.css">
     <link rel="stylesheet" href="Common.css">
-    <link rel="stylesheet" href="../css/style.css" />
-    <link rel="stylesheet" href="../css/confs/sig-cci1.css" />
-    <link rel="stylesheet" href="../css/ihover.css">
-    <link rel="stylesheet" href="../css/lightbox.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/confs/sig-cci1.css" />
+    <link rel="stylesheet" href="css/ihover.css">
+    <link rel="stylesheet" href="css/lightbox.css">
   </body>
 </html>
