sponsor.htmlを追加した。ヘッダーのボタンの配置を変えた。

--- a/registration.html
+++ b/registration.html
@@ -33,14 +33,11 @@
             <li><a href="prepare.html">対馬についての予習</a></li>
             <li><a href="fieldWork.html">フィールドワーク</a></li>
             <li><a href="traffic.html">交通案内</a></li>
+            <li><a href="sponsor.html">スポンサー</a></li>
             <li><a href="registration.html">参加申し込み</a></li>
+              <li><a href="https://form.jotform.me/70938432366462">原稿投稿</a></li>
           </ul>
 
-          <button type="button" class="btn btn-default navbar-btn navbar-right">
-            <a href="https://form.jotform.me/70938432366462">
-              原稿投稿
-            </a>
-          </button>
         </div>
 
         <!-- サイドメニュー開始 -->
